apps/churchlify/api-v3/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churchlify-api-v3
  namespace: churchlify
spec:
  selector:
    app: churchlify-api-v3
  ports:
    - port: 80
      targetPort: 3000
