apps/churchlify/api-v3/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churchlify-api-v3-ingress
  namespace: churchlify
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - v3.api.churchlify.com
      secretName: churchlify-api-tls
  rules:
    - host: v3.api.churchlify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churchlify-api-v3 # Must match your Service name
                port:
                  number: 3000 # Match the Service port
